external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_old_fun_fail.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:5:10
  │
5 │     spec fun with_aborts_if {
  │          ^^^
  │          │
  │          Unexpected 'fun'
  │          Expected only 'spec', drop the 'fun' keyword

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:5:29
  │
5 │     spec fun with_aborts_if {
  │                             ^
  │                             │
  │                             Unexpected '{'
  │                             Expected '('

error[E03009]: unbound variable
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:6:7
  │
6 │       aborts_if x == 0;
  │       ^^^^^^^^^ Unbound variable 'aborts_if'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:6:17
  │
6 │       aborts_if x == 0;
  │                 ^
  │                 │
  │                 Unexpected 'x'
  │                 Expected ';'

